# dux-cybervidya

./: .gitignore  CLAUDE.md  MANIFEST.in  README.md  license.txt  pyproject.toml  setup.py
dux_cybervidya/: hooks.py  modules.txt
dux_cybervidya/api/: collection.py  dashboard.py  jv.py  other_fees.py  other_fees_dashboard.py  refund.py  utils.py
dux_cybervidya/dux_cybervidya/doctype/cybervidya_account_mapping/: cybervidya_account_mapping.json  cybervidya_account_mapping.py
dux_cybervidya/dux_cybervidya/doctype/cybervidya_bank_map/: cybervidya_bank_map.json  cybervidya_bank_map.py
dux_cybervidya/dux_cybervidya/doctype/cybervidya_jv_map/: cybervidya_jv_map.js  cybervidya_jv_map.json  cybervidya_jv_map.py
dux_cybervidya/dux_cybervidya/doctype/cybervidya_other_fee_head_map/: cybervidya_other_fee_head_map.json  cybervidya_other_fee_head_map.py
dux_cybervidya/dux_cybervidya/doctype/cybervidya_other_fees_channel_map/: cybervidya_other_fees_channel_map.json  cybervidya_other_fees_channel_map.py
dux_cybervidya/dux_cybervidya/doctype/cybervidya_other_fees_mapping/: cybervidya_other_fees_mapping.js  cybervidya_other_fees_mapping.json  cybervidya_other_fees_mapping.py
dux_cybervidya/dux_cybervidya/page/daily_fee_collection/: daily_fee_collection.js  daily_fee_collection.json  (+1 more)
dux_cybervidya/fixtures/: custom_field.json  role.json
dux_cybervidya/public/css/: daily_fee_collection.css  other_fee_collection.css
dux_cybervidya/public/js/: daily_fee_collection.js  other_fee_collection.js
dux_cybervidya/scripts/: historical_import.py  other_fees_import.py
(+3 files in other folders)
